# ShortcutFM

./: .gitignore  .pre-commit-config.yaml  README.md  basic_utils.py  pyproject.toml  sample_seq2seq.py  train.py  train_util.py
configs/: default.yaml  qqp.yaml
configs/generation/: default.yaml  qqp.yaml
configs/training/: default.yaml  qqp.yaml
notebooks/: cosine_similarity_analysis.ipynb  dataloaders.ipynb  eval_model.ipynb  noisy_embeddings.ipynb  play.ipynb  qqp_eda.ipynb  test_weights.ipynb  text_cleaning.ipynb  time_embed.ipynb  token.ipynb  token_analysis_example.ipynb  unused_tokens.ipynb  vfm_loss.ipynb
scripts/: compare_checkpoints.py  eval.sh  eval_seq2seq.py  evaluate.py  evaluate_seq.py  run_decode.py  run_decode.sh  run_tokenize.py  run_train.py  tokenize.py  train_de2en.sh  train_qqp.sh
shortcutfm/: __main__.py  batch.py  config.json  config.py  criteria.py  gaussian_diffusion.py  nn.py  parametrization_strategy.py  rounding.py  shortcut_samplers.py  step_sample.py  text_datasets.py  tokenizer.py  train_unit.py  transformer_model.py  utils.py
shortcutfm/analysis/: __init__.py  denoising.py  embedding_analysis.py  token_analysis.py  velocity_analysis.py
shortcutfm/decoding/: detokenize.py  generate.py  prediction_strategies.py
shortcutfm/model/: DiT.py  config.py  dit_factory.py  factory.py  model.py
shortcutfm/train/: optim.py
shortcutfm/train/mosaic/: mosaic_train_unit.py  mosaic_trainer.py
shortcutfm/train/pl/: callbacks.py  train_unit.py  trainer.py  trainer_factory.py
shortcutfm/utils/: logger.py  nn.py
tests/: batch.py  criteria.py  test_collate.py
