[project]
name = "shorcutFM"
version = "0.1.0"
description = "Flow matching objective with shorcuts for faster inference with fewer sampling steps"
authors = [
    { name = "Jędrzej Warczyński" }
]
dependencies = [
    "torch>=2.6.0",
    "datasets>=3.3.2",
    "lightning>=2.5.0.post0",
    "numpy>=2.2.3",
    "omegaconf>=2.3.0",
    "transformers>=4.49.0",
    "pydantic>=2.10.6",
    "wandb>=0.19.7",
    "exca>=0.2.5",
    "evaluate>=0.4.3",
]
requires-python = ">=3.12"

[project.optional-dependencies]
evaluate = ["bert_score", "nltk", "rouge_score"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 120  # Matches black's default, adjust as needed
target-version = "py312"  # Matches your requires-python
exclude = [".git", "__pycache__", ".venv"]

[tool.ruff.format]
quote-style = "double"  # Consistent with black
#indent-style = "tab"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
#    "D", # pydocstyle (optional, for docstrings)
]
ignore = ["D100", "D103", "D103", "D104"]  # Example: Ignore missing module/public docstrings

